<resources>
    <string name="app_name">Cybercitizen</string>
    <string name="action_settings">Settings</string>
    <string name="acc_drawer_open">Open Drawer</string>
    <string name="acc_drawer_close">Close Drawer</string>
    <string name="activity_eat">Eat</string>
    <string name="activity_home">Home</string>
    <string name="drawer_about">About</string>
    <string name="drawer_settings">Settings</string>
    <string name="activity_shop">Shop</string>
    <string name="activity_health">Health</string>
    <string name="activity_travel">Travel</string>
    <string name="activity_outdoor">Outdoor</string>
    <string name="activity_exhibition">Exhibition</string>
    <string name="activity_profile">Profile</string>
    <string name="activity_promo">Saved Promos</string>
</resources>
